--- a/templates/index.html
+++ b/templates/index.html
@@ -19,44 +19,44 @@
     <div class="w3-top">
         <div class="w3-bar w3-red w3-card w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Galvēnā</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Spēlēt</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Noteikumi</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Rezultāti</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Autori</a>
+            <a href="#main" class="w3-bar-item w3-button w3-padding-large w3-white">Galvēnā</a>
+            <a href="#play" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Spēlēt</a>
+            <a href="#rules" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Noteikumi</a>
+            <a href="#leaderboard" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Rezultāti</a>
+            <a href="#creators" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Autori</a>
         </div>
 
         <!-- Navbar on small screens -->
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Galvēnā</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Spēlēt</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Noteikumi</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Rezultāti</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Autori</a>
+            <a href="#main" class="w3-bar-item w3-button w3-padding-large">Galvēnā</a>
+            <a href="#play" class="w3-bar-item w3-button w3-padding-large">Spēlēt</a>
+            <a href="#rules" class="w3-bar-item w3-button w3-padding-large">Noteikumi</a>
+            <a href="#leaderboard" class="w3-bar-item w3-button w3-padding-large">Rezultāti</a>
+            <a href="#creators" class="w3-bar-item w3-button w3-padding-large">Autori</a>
         </div>
     </div>
 
     <!-- Header -->
-    <header class="w3-container w3-red w3-center" style="padding:128px 16px">
+    <header class="w3-container w3-red w3-center" style="padding:128px 16px" id="main">
         <h1 class="w3-margin w3-jumbo">Burtu spēle</h1>
         <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Spēlēt</button>
     </header>
 
     <!-- Spēle -->
-    <div class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-row-padding w3-padding-64 w3-container" id="play">
         <p>Šeit būs spēle</p>
     </div>
 
     <!-- Noteikumi -->
-    <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="rules">
         <p>Šeit būs Noteikumi</p>
     </div>
     <!--Rezultāti-->
-    <div class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-row-padding w3-padding-64 w3-container" id="leaderboard">
         <p>Šeit būs spēle</p>
     </div>
     <!--Autori-->
-    <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="creators">
         <p>Šeit būs Noteikumi</p>
     </div>
     <!-- Footer -->
