--- a/templates/index.html
+++ b/templates/index.html
@@ -79,19 +79,19 @@
 
     <!-- Spēle -->
     <div class="w3-row-padding w3-padding-64 w3-container" id="play">
-        <p>Šeit būs spēle</p>
+        <p>Šeit būs spēle.</p>
     </div>
 
     <!-- Noteikumi -->
     <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="rules">
-        <p>Šeit būs Noteikumi</p>
+        <p>Šeit būs noteikumi.</p>
     </div>
     <!--Rezultāti-->
     <div class="w3-row-padding w3-padding-64 w3-container" id="leaderboard">
-        <p>Šeit būs spēle</p>
+        <p>Šeit būs rezultātu tabula.</p>
     </div>
     <!--Autori-->
-    <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="creators">
+    <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="creators" style="vertical-align: middle">
         <div class="card">
             <!--<img src="/w3images/team2.jpg" alt="John" style="width:100%">!-->
             <h1>Veronika Lohmanova</h1>
